更新依赖包版本及文档